@@ -6,6 +6,8 @@ xx xxx 2017, Version Next
 
 - Fixed the recording of live radio streams
 - New option --duration for limitting the max duration to download
+- Stricter parsing of command line. URL must be last. Some invalid argument
+  combinations that were previously silently ignored now result in error.
 
 19 Jul 2017, Version 2.20
 
